# krakenings-discord-bot

./: Dockerfile  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: ensure-env.sh
src/krakenings_discord_bot/: __main__.py  bot.py  espn.py
